Integration tests - running the tests
Initial setup for running the integration tests. A basic test is
included to ensure this works, although it will be rewritten to follow
the Page Object pattern. Thanks to Daniel Korn for the initial test.

https://wiki.openstack.org/wiki/Horizon/Testing/UI

Implements blueprint: selenium-integration-testing

Change-Id: Id5b62cdeac5295667a3922f7bed1db3c7617f841

--- a/tox.ini
+++ b/tox.ini
@@ -30,6 +30,14 @@ basepython = python2.7
 commands = pip install django==1.4
            /bin/bash run_tests.sh -N --no-pep8
 
+[testenv:py27integration]
+basepython = python2.7
+commands = /bin/bash run_tests.sh -N --integration
+
+[testenv:py26integration]
+basepython = python2.6
+commands = /bin/bash run_tests.sh -N --integration
+
 [tox:jenkins]
 downloadcache = ~/cache/pip
 
