Renames tools/pip-requires to requirements.txt
and tools/test-requires to test-requirements.txt

These are standard files and tools in the
general world are growing intelligence about them.

Change-Id: Iac3c680dd19cabd8ea38598a6e2bb27238030a2d
Fixes: bug #1179008

--- a/tox.ini
+++ b/tox.ini
@@ -8,8 +8,8 @@ setenv = VIRTUAL_ENV={envdir}
          NOSE_OPENSTACK_RED=0.05
          NOSE_OPENSTACK_YELLOW=0.025
          NOSE_OPENSTACK_SHOW_ELAPSED=1
-deps = -r{toxinidir}/tools/pip-requires
-       -r{toxinidir}/tools/test-requires
+deps = -r{toxinidir}/requirements.txt
+       -r{toxinidir}/test-requirements.txt
 commands = /bin/bash run_tests.sh -N
 
 [testenv:pep8]
