Sort imports alphabetically
This patch also re-organizes imports to import one per line.

Change-Id: Ia958e3a30a48d4308d08d51df243c1272425c316
Fixes: bug 1188529
Fixes: bug 1188537

--- a/tox.ini
+++ b/tox.ini
@@ -44,7 +44,6 @@ exclude =  .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,p
 # F999 syntax error in doctest
 # H101 Use TODO(NAME)
 # H201 no 'except:' at least use 'except Exception:'
-# H301 one import per line
 # H302 import only modules.'from optparse import make_option' does not import a module
 # H303 No wildcard (*) import.
 # H304 No relative imports. 'from .views import IndexView' is a relative import
@@ -52,4 +51,4 @@ exclude =  .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,p
 # H4xx docstrings
 # H701 empty localization string
 # H702  Formatting operation should be outside of localization method call
-ignore = E121,E126,E127,E128,F403,F811,F821,F841,F999,H101,H201,H301,H302,H303,H304,H306,H4,H701,H702
+ignore = E121,E126,E127,E128,F403,F811,F821,F841,F999,H101,H201,H302,H303,H304,H306,H4,H701,H702
