--- a/tox.ini
+++ b/tox.ini
@@ -44,8 +44,7 @@ exclude =  .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,p
 # H302 import only modules.'from optparse import make_option' does not import a module
 # H303 No wildcard (*) import.
 # H304 No relative imports. 'from .views import IndexView' is a relative import
-# H306 imports not in alphabetical order (horizon.loaders, horizon.conf)
 # H4xx docstrings
 # H701 empty localization string
 # H702  Formatting operation should be outside of localization method call
-ignore = E121,E126,E127,E128,F403,F841,F999,H201,H302,H303,H304,H306,H4,H701,H702
+ignore = E121,E126,E127,E128,F403,F841,F999,H201,H302,H303,H304,H4,H701,H702
