Enable pep8 F841 checking.
This check looks to see whether a local variable
is unused. Also fixed all violators of said check.

Change-Id: I7c186df41b5601078ffc54588aace8136c6576bd

--- a/tox.ini
+++ b/tox.ini
@@ -38,7 +38,6 @@ exclude =  .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,p
 # E128 continuation line under-indented for visual indent
 # F401 '<smth>' imported but unused
 # F403 'from <smth> import *' used; unable to detect undefined names
-# F841 local variable '<smth>' is assigned to but never used
 # F999 syntax error in doctest
 # H201 no 'except:' at least use 'except Exception:'
 # H302 import only modules.'from optparse import make_option' does not import a module
@@ -46,4 +45,4 @@ exclude =  .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,p
 # H4xx docstrings
 # H701 empty localization string
 # H702  Formatting operation should be outside of localization method call
-ignore = E121,E126,E127,E128,F403,F841,F999,H201,H302,H303,H4,H701,H702
+ignore = E121,E126,E127,E128,F403,F999,H201,H302,H303,H4,H701,H702
