--- a/tox.ini
+++ b/tox.ini
@@ -39,9 +39,8 @@ exclude =  .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,p
 # F403 'from <smth> import *' used; unable to detect undefined names
 # F999 syntax error in doctest
 # H102 Apache 2.0 license header not found
-# H201 no 'except:' at least use 'except Exception:'
 # H302 import only modules.'from optparse import make_option' does not import a module
 # H4xx docstrings
 # H701 empty localization string
 # H702  Formatting operation should be outside of localization method call
-ignore = E121,E126,E127,E128,F403,F999,H102,H201,H302,H4,H701,H702
+ignore = E121,E126,E127,E128,F403,F999,H102,H302,H4,H701,H702
