--- a/tox.ini
+++ b/tox.ini
@@ -35,10 +35,8 @@ exclude =  .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,p
 # E126 continuation line over-indented for hanging indent
 # E127 continuation line over-indented for visual indent
 # E128 continuation line under-indented for visual indent
-# F403 'from <smth> import *' used; unable to detect undefined names
-# F999 syntax error in doctest
 # H102 Apache 2.0 license header not found
 # H4xx docstrings
 # H701 empty localization string
 # H702 Formatting operation should be outside of localization method call
-ignore = E126,E127,E128,F403,F999,H102,H4,H701,H702
+ignore = E126,E127,E128,H102,H4,H701,H702
