Remove leftovers of "# noqa"
This patch set removes leftovers of "# noqa" from imports
added to import_exceptions.

It also adds "django.test.utils.override_settings" to
import_exceptions, so a few more "# noqa" tags become
unnecessary.

Closes-Bug: #1273647

Change-Id: I39f856ac3ea371a2fcab272bbf358d0243164b6d

--- a/tox.ini
+++ b/tox.ini
@@ -49,6 +49,7 @@ import_exceptions = collections.defaultdict,
                     django.core.urlresolvers.reverse,
                     django.core.urlresolvers.reverse_lazy,
                     django.template.loader.render_to_string,
+                    django.test.utils.override_settings,
                     django.utils.datastructures.SortedDict,
                     django.utils.encoding.force_unicode,
                     django.utils.html.conditional_escape,
