--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py26,py27,py27dj14,pep8,py33
+envlist = py26,py27,py27dj14,py27dj15,pep8,py33
 minversion = 1.6
 skipsdist = True
 
@@ -29,6 +29,11 @@ commands = /bin/bash run_tests.sh -N --no-pep8 --coverage
 [testenv:py27dj14]
 basepython = python2.7
 commands = pip install django==1.4
+           /bin/bash run_tests.sh -N --no-pep8
+
+[testenv:py27dj15]
+basepython = python2.7
+commands = pip install django>=1.5,<1.6
            /bin/bash run_tests.sh -N --no-pep8
 
 [testenv:py27integration]
