Use built-in print() instead of print statement
In python 3 print statement is not supported, so we should use
only print() functions.

Fixes bug 1226943

Change-Id: I721e67c917ba7018401ad40ef30081883dcec420

--- a/tox.ini
+++ b/tox.ini
@@ -49,7 +49,7 @@ downloadcache = ~/cache/pip
 
 [flake8]
 builtins = _
-exclude = .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,panel_template,dash_template,local_settings.py,*/local/*
+exclude = .venv,.git,.tox,dist,*openstack/common*,*lib/python*,*egg,build,panel_template,dash_template,local_settings.py,*/local/*
 # E127 continuation line over-indented for visual indent
 # E128 continuation line under-indented for visual indent
 # H701 empty localization string
