Sort requirement files in alphabetical order
This makes code more readable, and can check whether specific library
in the requirement files easily. We enforce the check in pep8, We also
add the tools for checking requirements.txt and test_requirements.txt.

Change-Id: Ia0a24553b7a5204faf6413c17dae6ba6aae2b5e8
Closes-Bug: #1285478

--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,7 @@ commands = /bin/bash run_tests.sh -N --no-pep8
 
 [testenv:pep8]
 commands = /bin/bash run_tests.sh -N --pep8
+           {toxinidir}/tools/requirements_style_check.sh requirements.txt test-requirements.txt
 
 [testenv:venv]
 commands = {posargs}
