Add tox env to build docs
In django-based projects, we need to specify DJANGO_SETTINGS_MODULE
when running docs build. It is required to addresses the warnings of
docs build job in the gate.

This commit also changes run_tests.sh --docs to use "python setup.py
build_sphinx" to match tox docs env. This change addresses all sphinx
build warning except keystone v3 related following warning.
I believe it is useful.
  NoReverseMatch: u'domains' is not a registered namespace
  inside 'horizon:admin'

Closes-Bug: #1302532
Related-Bug: #1257725

Change-Id: I3663b81b58be3c6cb05e4af914f768c28b21ea07

--- a/tox.ini
+++ b/tox.ini
@@ -44,6 +44,10 @@ commands = /bin/bash run_tests.sh -N --integration
 basepython = python2.6
 commands = /bin/bash run_tests.sh -N --integration
 
+[testenv:docs]
+setenv = DJANGO_SETTINGS_MODULE=openstack_auth.tests.settings
+commands = python setup.py build_sphinx
+
 [tox:jenkins]
 downloadcache = ~/cache/pip
 
