Use the latest Django 1.4 release to test Horizon
Change-Id: Ia991731e999ebcda91cf0439f58bb8263737197a
Closes: bug #1308123

--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ commands = /bin/bash run_tests.sh -N --no-pep8 --coverage {posargs}
 
 [testenv:py27dj14]
 basepython = python2.7
-commands = pip install django==1.4
+commands = pip install django>=1.4,<1.5
            /bin/bash run_tests.sh -N --no-pep8 {posargs}
 
 [testenv:py27dj15]
