Add jshint for javascript linting
Added nodeenv as a test requirement.

Added a jshint environment to tox.ini, which installs node.js into the
python virtual environment with nodeenv, installs jshint using npm,
and calls runtest.sh to run the tests.

runtest.sh now supports the -j|--jshint flags to run jshint on the
javascript files. jshint must be installed before running runtest.sh

The documentation also got updated to include some info about jshint.

This patch does not add jshint to the OpenStack codebase, just provides
a way to install it for testing, to avoid license clash (jshint has a
slightly modified MIT license, which is incompatible with OpenStack's
Apache license).

Change-Id: I9dd0743eaee50fdba3dbb527c29f2501bdd44ca6
Implements: blueprint node-toolchain
Implements: blueprint jshint-codestyle

--- a/tox.ini
+++ b/tox.ini
@@ -44,6 +44,11 @@ commands = /bin/bash run_tests.sh -N --integration {posargs}
 basepython = python2.6
 commands = /bin/bash run_tests.sh -N --integration {posargs}
 
+[testenv:jshint]
+commands = nodeenv -p
+           npm install jshint -g
+           /bin/bash run_tests.sh -N --jshint
+
 [testenv:docs]
 setenv = DJANGO_SETTINGS_MODULE=openstack_dashboard.test.settings
 commands = python setup.py build_sphinx
