Replace force_unicode with force_text
Django changed the name to force_unicode and it's only available in
python2 as an alias of force_text. The new name is available since
Django 1.4.2

Closes-Bug: #1345642
Change-Id: Ida8c545ceec7c31999f2497d540a0dc5a653d286

--- a/tox.ini
+++ b/tox.ini
@@ -74,7 +74,7 @@ import_exceptions = collections.defaultdict,
                     django.template.loader.render_to_string,
                     django.test.utils.override_settings,
                     django.utils.datastructures.SortedDict,
-                    django.utils.encoding.force_unicode,
+                    django.utils.encoding.force_text,
                     django.utils.html.conditional_escape,
                     django.utils.html.escape,
                     django.utils.http.urlencode,
