--- a/tox.ini
+++ b/tox.ini
@@ -62,10 +62,9 @@ exclude = .venv,.git,.tox,dist,*openstack/common*,*lib/python*,*egg,build,panel_
 # E128 continuation line under-indented for visual indent
 # H307  like imports should be grouped together
 # H405  multi line docstring summary not separated with an empty line
-# H701 empty localization string
 # H803 git commit title should not end with period (disabled on purpose, see bug #1236621)
 # H904  Wrap long lines in parentheses instead of a backslash
-ignore = E127,E128,H307,H405,H701,H803,H904
+ignore = E127,E128,H307,H405,H803,H904
 
 [hacking]
 import_exceptions = collections.defaultdict,
