--- a/tox.ini
+++ b/tox.ini
@@ -63,10 +63,9 @@ exclude = .venv,.git,.tox,dist,*openstack/common*,*lib/python*,*egg,build,panel_
 # H307  like imports should be grouped together
 # H405  multi line docstring summary not separated with an empty line
 # H701 empty localization string
-# H702 Formatting operation should be outside of localization method call
 # H803 git commit title should not end with period (disabled on purpose, see bug #1236621)
 # H904  Wrap long lines in parentheses instead of a backslash
-ignore = E127,E128,H307,H405,H701,H702,H803,H904
+ignore = E127,E128,H307,H405,H701,H803,H904
 
 [hacking]
 import_exceptions = collections.defaultdict,
