--- a/tox.ini
+++ b/tox.ini
@@ -40,11 +40,11 @@ commands = pip install django>=1.5,<1.6
 
 [testenv:py27integration]
 basepython = python2.7
-commands = /bin/bash run_tests.sh -N --integration {posargs}
+commands = /bin/bash run_tests.sh -N --integration --selenium-headless {posargs}
 
 [testenv:py26integration]
 basepython = python2.6
-commands = /bin/bash run_tests.sh -N --integration {posargs}
+commands = /bin/bash run_tests.sh -N --integration --selenium-headless {posargs}
 
 [testenv:jshint]
 commands = nodeenv -p
