Exclude .ropeproject from flake8 checks
Change-Id: I4e0bc52de3b251a62f24e89df2db598fbc7e7016
Closes-Bug: #1297016

--- a/tox.ini
+++ b/tox.ini
@@ -59,7 +59,7 @@ commands = python setup.py build_sphinx
 downloadcache = ~/cache/pip
 
 [flake8]
-exclude = .venv,.git,.tox,dist,*openstack/common*,*lib/python*,*egg,build,panel_template,dash_template,local_settings.py,*/local/*,*/test/test_plugins/*
+exclude = .venv,.git,.tox,dist,*openstack/common*,*lib/python*,*egg,build,panel_template,dash_template,local_settings.py,*/local/*,*/test/test_plugins/*,.ropeproject
 # E127 continuation line over-indented for visual indent
 # E128 continuation line under-indented for visual indent
 # H307  like imports should be grouped together
