Work toward Python 3.4 support and testing
Change-Id: Ic4e5af990d5a3dc85de2f90ea41189cb4a5d99fa

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py26,py27,py27dj14,py27dj15,pep8,py33
+envlist = py26,py27,py27dj14,py27dj15,pep8,py33,py34
 minversion = 1.6
 skipsdist = True
 
