Remove #noqa from two common imports and add them to import_exceptions
We have two imports with #noqa: django.conf.urls.patterns and
django.conf.urls.url however using them is a standard way of creating
any urls.py module. So there are over 150 imports in Horizon code
where #noqa could be replaced with two lines in list of import_exceptions.

Change-Id: I81c3290e0dc958b5037dd6a87e44df18adfbe751

--- a/tox.ini
+++ b/tox.ini
@@ -71,6 +71,8 @@ ignore = E127,E128,H307,H405,H803,H904
 [hacking]
 import_exceptions = collections.defaultdict,
                     django.conf.settings,
+                    django.conf.urls.patterns,
+                    django.conf.urls.url,
                     django.core.urlresolvers.reverse,
                     django.core.urlresolvers.reverse_lazy,
                     django.template.loader.render_to_string,
