Remove #noqa from django.conf.urls.include
We have one more import with #noqa: django.conf.urls.include that is also
commonly used in urls.py module and could be included to the list of
import exceptions. This change has also revealed one unused import.

Change-Id: I47cc582340625aac87ab0242b147e11ef1d9b38e

--- a/tox.ini
+++ b/tox.ini
@@ -71,6 +71,7 @@ ignore = E127,E128,H307,H405,H803,H904
 [hacking]
 import_exceptions = collections.defaultdict,
                     django.conf.settings,
+                    django.conf.urls.include,
                     django.conf.urls.patterns,
                     django.conf.urls.url,
                     django.core.urlresolvers.reverse,
