--- a/tox.ini
+++ b/tox.ini
@@ -62,12 +62,11 @@ downloadcache = ~/cache/pip
 
 [flake8]
 exclude = .venv,.git,.tox,dist,*openstack/common*,*lib/python*,*egg,build,panel_template,dash_template,local_settings.py,*/local/*,*/test/test_plugins/*,.ropeproject
-# E128 continuation line under-indented for visual indent
 # H307 like imports should be grouped together
 # H405 multi line docstring summary not separated with an empty line
 # H803 git commit title should not end with period (disabled on purpose, see bug #1236621)
 # H904 Wrap long lines in parentheses instead of a backslash
-ignore = E128,H307,H405,H803,H904
+ignore = H307,H405,H803,H904
 
 [hacking]
 import_exceptions = collections.defaultdict,
