Add check for makemessages in tox.ini PEP8
This commit adds a check of extracting message catalogs to
tox PEP8 check. It is useful to avoid a bug like bug 1379054.

It also fixes a warning "WARNING:root:No local_settings file found."
in run_tests.sh --makemessages and --compilemessages by specifying
Django settings.

Closes-Bug: #1379507

Change-Id: I5541e28a87d48601202bf8180a18eadb5a91770b

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,9 @@ deps = -r{toxinidir}/requirements.txt
 commands = /bin/bash run_tests.sh -N --no-pep8 {posargs}
 
 [testenv:pep8]
-commands = /bin/bash run_tests.sh -N --pep8
+commands =
+  /bin/bash run_tests.sh -N --pep8
+  /bin/bash run_tests.sh -N --makemessages --check-only
 
 [testenv:venv]
 commands = {posargs}
