--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py26,py27,py27dj14,py27dj15,pep8,py33,py34
+envlist = py27,py27dj14,py27dj15,pep8,py33,py34
 minversion = 1.6
 skipsdist = True
 
@@ -42,10 +42,6 @@ commands = pip install django>=1.5,<1.6
 
 [testenv:py27integration]
 basepython = python2.7
-commands = /bin/bash run_tests.sh -N --integration --selenium-headless {posargs}
-
-[testenv:py26integration]
-basepython = python2.6
 commands = /bin/bash run_tests.sh -N --integration --selenium-headless {posargs}
 
 [testenv:jshint]
