Add in repo zuul job definition
Add .zuul.yaml file to make sure more flexible zuul job controll by
heat-dashboard team members, apart from project-config repo.
We will keep basic & common jobs in project-config repo,
also heat-dashboard repo will have specific jobs like as multi django
ver jobs.

Change-Id: Ia9084b10bf4bb1941e0eb21b51798c2090b459cc

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "eslint-plugin-jasmine": "2.9.1"
   },
   "scripts": {
-    "test": "karma start karma.conf.js --single-run",
-    "eslint": "eslint --no-color heat_dashboard/static/dashboard/project/heat_dashboard/template_generator/js/"
+    "test": "if [ -z $CHROME_BIN ];then export CHROME_BIN=/usr/bin/chromium-browser;fi && karma start karma.conf.js --single-run",
+    "lint": "eslint --no-color heat_dashboard/static/dashboard/project/heat_dashboard/template_generator/js/"
   },
   "author": "",
   "license": "Apache-2.0"
