--- a/tox.ini
+++ b/tox.ini
@@ -106,6 +106,15 @@ exclude = .venv,.git,.tox,dist,*lib/python*,*egg,build,panel_template,dash_templ
 max-complexity = 20
 import-order-style = pep8
 
+[testenv:npm]
+passenv =
+  HOME
+  DISPLAY
+commands =
+  nodeenv -p
+  npm install
+  npm run {posargs:test}
+
 [doc8]
 # File extensions to check
 extensions = .rst, .yaml
