--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "directories": {
     "doc": "doc"
   },
-  "dependencies": {
+  "devDependencies": {
     "angular-ui-router": "0.4.3",
     "angular-mocks": "1.5.8",
     "angular": "1.5.8",
@@ -17,9 +17,7 @@
     "karma-firefox-launcher": "1.0.1",
     "karma-chrome-launcher": "2.2.0",
     "karma-ng-html2js-preprocessor": "1.0.0",
-    "karma": "1.7.1"
-  },
-  "devDependencies": {
+    "karma": "1.7.1",
     "eslint": "4.9.0",
     "eslint-plugin-angular": "3.1.1",
     "eslint-plugin-jasmine": "2.9.1"
