Align tox_install.sh with other projects
pip_install.sh is renamed to tox_install.sh to align with other projects.

The tox_install.sh here behaves a bit differently than the others, which
is causing some problems when trying to rework some of the shared gate jobs.
Align it to the form used in other repos.

Change-Id: Ie35d2b33f4bfaa8383c7af9e5ca489b61f7da073

--- a/tox.ini
+++ b/tox.ini
@@ -5,8 +5,8 @@ skipsdist = True
 
 [testenv]
 usedevelop = True
-install_command = {toxinidir}/tools/pip_install.sh \
-                  -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt} \
+install_command = {toxinidir}/tools/tox_install.sh \
+                  {env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt} \
                   {opts} {packages}
 setenv =
   VIRTUAL_ENV={envdir}
@@ -102,7 +102,7 @@ commands = sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasen
 local-check-factory = horizon.hacking.checks.factory
 
 [flake8]
-exclude = .venv,.git,.tox,dist,*lib/python*,*egg,build,panel_template,dash_template,local_settings.py,*/local/*,*/test/test_plugins/*,.ropeproject,node_modules
+exclude = .venv,.git,.tox,dist,*lib/python*,*egg,build,panel_template,dash_template,local_settings.py,*/local/*,*/test/test_plugins/*,.ropeproject,node_modules,.tmp
 max-complexity = 20
 import-order-style = pep8
 
