Deleted locale dir & Updated babel-django.cfg
To enable translate job correctly, deleted heat-dashboard/locale
directory and updated babel-django.cfg accordingly.
Also fixed tox.ini which included wrong commands for docs build.

Change-Id: Idb7996ded645a8bc8bcb3b7eb08c8754a8492873

--- a/tox.ini
+++ b/tox.ini
@@ -91,9 +91,7 @@ commands =
   {[unit_tests]commands}
 
 [testenv:docs]
-commands =
-  doc8 releasenotes/source releasenotes/notes
-  sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
+commands = python setup.py build_sphinx
 
 [testenv:releasenotes]
 commands = sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
