--- a/tox.ini
+++ b/tox.ini
@@ -91,9 +91,11 @@ commands =
   {[unit_tests]commands}
 
 [testenv:docs]
+deps = -r{toxinidir}/doc/requirements.txt
 commands = python setup.py build_sphinx
 
 [testenv:releasenotes]
+deps = -r{toxinidir}/doc/requirements.txt
 commands = sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
 
 [hacking]
