--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-recursive-include heat_dashboard *.html *.scss *.css *.js *.map *.svg *.png
+recursive-include heat_dashboard *.html *.scss *.css *.js *.map *.svg *.png *.json
 
 include AUTHORS
 include ChangeLog
