--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "angular-ui-router": "0.4.3",
     "angular-mocks": "1.5.8",
     "angular": "1.5.8",
+    "angular-animate": "1.5.8",
+    "angular-aria": "1.5.8",
+    "angular-messages": "1.5.8",
+    "angular-sanitize": "1.5.8",
+    "angular-ui-bootstrap": "2.5.0",
     "jasmine": "2.8.0",
     "jasmine-core": "2.8.0",
     "karma-coverage": "1.1.1",
