Replace embedded static files with XStatic-*
Remove embedded js/css, add reference in settings,
 add requirement xstatic libs.

Change-Id: I3424e3f965f65eeb4ddcef18a69a7b33918d8a09
Task: #18882
Story: #1753919

--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,9 @@ commands =
   py35: {[unit_tests]commands}
 
 [unit_tests]
-commands = python manage.py test heat_dashboard.test --settings=heat_dashboard.test.settings
+commands =
+  pip install -r requirements.txt
+  python manage.py test heat_dashboard.test --settings=heat_dashboard.test.settings
 
 [testenv:pep8]
 commands = flake8 {posargs}
@@ -68,6 +70,7 @@ import-order-style = pep8
 passenv =
   HOME
   DISPLAY
+  CHROME_BIN
 commands =
   nodeenv -p
   npm install
