--- a/package.json
+++ b/package.json
@@ -7,25 +7,35 @@
     "doc": "doc"
   },
   "devDependencies": {
-    "angular-ui-router": "0.4.3",
-    "angular-mocks": "1.5.8",
+    "@appscode/json2yaml": "0.1.0",
+    "@cgross/angular-notify": "2.5.1",
     "angular": "1.5.8",
     "angular-animate": "1.5.8",
     "angular-aria": "1.5.8",
+    "angular-material": "1.1.5",
     "angular-messages": "1.5.8",
+    "angular-mocks": "1.5.8",
+    "angular-notify": "1.0.0",
     "angular-sanitize": "1.5.8",
     "angular-ui-bootstrap": "2.5.0",
-    "jasmine": "2.8.0",
-    "jasmine-core": "2.8.0",
-    "karma-coverage": "1.1.1",
-    "karma-jasmine": "1.1.0",
-    "karma-firefox-launcher": "1.0.1",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-ng-html2js-preprocessor": "1.0.0",
-    "karma": "1.7.1",
+    "angular-ui-router": "0.4.3",
+    "angular-uuid": "0.0.4",
+    "angular-visjs": "4.16.0",
     "eslint": "4.9.0",
     "eslint-plugin-angular": "3.1.1",
-    "eslint-plugin-jasmine": "2.9.1"
+    "eslint-plugin-jasmine": "2.9.1",
+    "file-saver": "1.3.2",
+    "jasmine": "2.8.0",
+    "jasmine-core": "2.8.0",
+    "js-yaml": "3.8.1",
+    "json2yaml": "1.1.0",
+    "karma": "1.7.1",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-coverage": "1.1.1",
+    "karma-firefox-launcher": "1.0.1",
+    "karma-jasmine": "1.1.0",
+    "karma-ng-html2js-preprocessor": "1.0.0",
+    "vis": "4.3.0"
   },
   "scripts": {
     "test": "if [ -z $CHROME_BIN ];then export CHROME_BIN=/usr/bin/chromium-browser;fi && karma start karma.conf.js --single-run",
