Avoid tox-install.sh
Instead of using tox-install.sh, we can install horizon and neutron
now directly from pypi - or use the current branch in CI system using
tox-siblings.

Update tox.ini for this change and add horizon to requirements file.

Change-Id: I898fb222f5b36714c61e60c222e8b57ddea99df6

--- a/tox.ini
+++ b/tox.ini
@@ -5,9 +5,6 @@ skipsdist = True
 
 [testenv]
 usedevelop = True
-install_command = {toxinidir}/tools/tox_install.sh \
-                  {env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt} \
-                  {opts} {packages}
 setenv =
   VIRTUAL_ENV={envdir}
   INTEGRATION_TESTS=0
@@ -16,7 +13,8 @@ setenv =
   NOSE_OPENSTACK_RED=0.05
   NOSE_OPENSTACK_YELLOW=0.025
   NOSE_OPENSTACK_SHOW_ELAPSED=1
-deps = -r{toxinidir}/requirements.txt
+deps = -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt}
+       -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands =
   py27: {[unit_tests]commands}
@@ -91,11 +89,13 @@ commands =
   {[unit_tests]commands}
 
 [testenv:docs]
-deps = -r{toxinidir}/doc/requirements.txt
+deps = -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt}
+       -r{toxinidir}/doc/requirements.txt
 commands = python setup.py build_sphinx
 
 [testenv:releasenotes]
-deps = -r{toxinidir}/doc/requirements.txt
+deps = -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt}
+       -r{toxinidir}/doc/requirements.txt
 commands = sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
 
 [hacking]
