--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,7 @@
 # PBR should always appear first
 pbr!=2.1.0,>=2.0.0 # Apache-2.0
 python-heatclient>=1.10.0 # Apache-2.0
+
+# This will be installed from git in OpenStack CI if the job setting
+# required-projects for horizon:
+horizon>=13.0.0  # Apache-2.0
