--- a/tox.ini
+++ b/tox.ini
@@ -88,6 +88,12 @@ commands =
   pip install django>=1.11,<2.0
   {[unit_tests]commands}
 
+[testenv:py35dj20]
+basepython = python3.5
+commands =
+  pip install django>=2.0,<2.1
+  {[unit_tests]commands}
+
 [testenv:docs]
 deps = -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt}
        -r{toxinidir}/doc/requirements.txt
