fix tox python3 overrides
We want to default to running all tox environments under python 3, so
set the basepython value in each environment.

We do not want to specify a minor version number, because we do not
want to have to update the file every time we upgrade python.

We do not want to set the override once in testenv, because that
breaks the more specific versions used in default environments like
py35 and py36.

Change-Id: I981fa8d52800d24a5007f369ca6df4ffca9be0cb

--- a/tox.ini
+++ b/tox.ini
@@ -27,12 +27,15 @@ commands =
   python manage.py test heat_dashboard.test --settings=heat_dashboard.test.settings
 
 [testenv:pep8]
+basepython = python3
 commands = flake8 {posargs}
 
 [testenv:venv]
+basepython = python3
 commands = {posargs}
 
 [testenv:cover]
+basepython = python3
 commands =
   coverage erase
   coverage run --source=heat_dashboard {toxinidir}/manage.py test heat_dashboard.test.tests --settings=heat_dashboard.test.settings {posargs}
@@ -54,11 +57,13 @@ commands =
   {[unit_tests]commands}
 
 [testenv:docs]
+basepython = python3
 deps = -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt}
        -r{toxinidir}/doc/requirements.txt
 commands = python setup.py build_sphinx
 
 [testenv:releasenotes]
+basepython = python3
 deps = -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt}
        -r{toxinidir}/doc/requirements.txt
 commands = sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
@@ -72,6 +77,7 @@ max-complexity = 20
 import-order-style = pep8
 
 [testenv:npm]
+basepython = python3
 passenv =
   HOME
   DISPLAY
